# pidgin

./: .gitignore  LICENSE  README.md  creole.cabal  genParser.sh  makefile  pidgin.cabal  run.sh  stack.yaml  todo.org
app/: Main.hs
in/: input.pgn
notes/: Arrays  General  Syntax
notes/TypeCheck/: SubTyping
sample-in/: sample-in.txt
src/: Ast.hs  Ast0Builder.hs  Ast0ToAst1.hs  Ast1.hs  Ast2Builder.hs  AstBuilderT.hs  AstBuilderU.hs  AstUtil.hs  CodeGen.hs  CodeGenInstructions.hs  CodeGenM.hs  CodeGenUtil.hs  Cycle.hs  Debug.hs  FormatAst.hs  Kinds.hs  Lexer.hs  Lexer.x  LlvmUtil.hs  MultiMap.hs  MultiMapAst.hs  MultiMapInstances.hs  ParseError.hs  ParseUtil.hs  Parser.hs  Parser.y  PostParse.hs  PostParseAst.hs  Preface.hs  Source.hs  SymTable.hs  SymbolTree.hs  Syntax.hs  Tokens.hs  Transforms.hs  TypeCheck.hs  TypeCheckM.hs  TypeCheckUtil.hs  TypeContext.hs  TypeErrors.hs  (+1 more)
src/Ast/: A0Parse.hs  A1PostParse.hs  A2Constrained.hs  A3Typed.hs  Error.hs  Name.hs  Op.hs  Phases.hs  PrettyPrint.hs  Type.hs
src/Ast/A0Parse/: Sig.hs  Type.hs
src/Ast/A2Constrained/: Error.hs  PrettyPrint.hs  Type.hs
src/Ast/A3Typed/: PrettyPrint.hs  Type.hs
src/Ast/Common/: Access.hs  Intrinsic.hs  Intrinsics.hs  Mutability.hs  Name.hs  Op.hs  Purity.hs  Table.hs  Value.hs
src/CodeGen/: CodeGenM.hs  Instructions.hs  Util.hs
src/Lexer/: FormatTokens.hs  Token.hs  Tokens.hs
src/Parser/: Error.hs  Util.hs
src/TypeCheck/: ApplySubs.hs  ConstrainM.hs  Constraint.hs  ConstraintGen.hs  ErrorM.hs  Kind.hs  SubAst.hs  Substitution.hs  Unify.hs  Util.hs
src/Util/: Cycle.hs  Debug.hs  MultiMap.hs  Preface.hs  PrettyShow.hs  StrongIndexVector.hs  UnorderedPair.hs
src/X/: Ast.hs  Error.hs  TypeCheck.hs
src/X/TypeCheck/: ConstrainM.hs  ConstraintGen.hs  ErrorM.hs  Reduce.hs  Substitution.hs  Util.hs
test/: Ediff.hs  Test.hs  TestCase.hs  TestCases.hs  TestComposer.hs  TestInput.hs  TestLexer.hs
test/Test/: CodeGen.hs  Lexer.hs  Parser.hs  TypeCheck.hs
test/Test/TypeCheck/: Unify.hs
test/Test/X/: Reduce.hs
