name:                pidgin
version:             0.1.0.0
synopsis:            An implementation in progress for a notional language called pidgin
description:         Please see README.md
homepage:            https://github.com/SongWithoutWords/pidgin#readme
license:             BSD3
license-file:        LICENSE
author:              Ian McCall
maintainer:          ianmccall93@gmail.com
copyright:           2017 Ian McCall
category:            Programming Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


extra-source-files:    src/Lexer.x
                     , src/Parser.y

library

  hs-source-dirs:      src

  exposed-modules:     Ast
                     , Ast0Builder
                     , Ast2Builder
                     , CodeGen
                     , FormatAst
                     , Lexer
                     , LlvmUtil
                     , MultiMap
                     , ParseError
                     , Parser
                     , PostParseAst
                     , Preface
                     , Source
                     , Tokens 
                     , Transforms
                     , TypeCheck

  other-modules:       Debug
                     , Cycle
                     , CodeGenInstructions
                     , CodeGenM
                     , CodeGenUtil
                     , TypeCheckM
                     , TypeCheckUtil
                     , TypeContext

  build-tools:         alex
                     , happy

  build-depends:       base
                     , bytestring
                     , containers
                     , array
                     , llvm-hs >= 5.0.0
                     , llvm-hs-pure >= 5.0.0
                     , monad-st
                     , mtl
                     , transformers

  ghc-options:

  default-language:    Haskell2010


executable pidgin
  hs-source-dirs:      app

  main-is:             Main.hs

  build-depends:       base
                     , pidgin

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010


test-suite pidgin-test
  hs-source-dirs:      test

  main-is:             Test.hs

  other-modules:       TestCase
                     , TestCases
                     , TestComposer

  build-depends:       base
                     , containers
                     , pidgin
                     , tasty
                     , tasty-hunit

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/SongWithoutWords/pidgin
