name:                pidgin
version:             0.1.0.0
synopsis:            An implementation in progress for a notional language called pidgin
description:         Please see README.md
homepage:            https://github.com/SongWithoutWords/pidgin#readme
license:             BSD3
license-file:        LICENSE
author:              Ian McCall
maintainer:          ianmccall93@gmail.com
copyright:           2017 Ian McCall
category:            Programming Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


extra-source-files:    src/Lexer.x
                     , src/Parser.y

library

  hs-source-dirs:      src

  exposed-modules:     Ast
                     , Ast.PrettyPrint
                     , Ast0Builder
                     , Ast2Builder
                     , Ast.Error
                     , CodeGen
                     , Lexer
                     , Lexer.Token
                     , Lexer.FormatTokens
                     , LlvmUtil
                     , Parser
                     , Parser.Error
                     , PostParseAst
                     , Transforms
                     , TypeCheck
                     , TypeCheck.Unify
                     , Util.MultiMap
                     , Util.Preface

  other-modules:       Ast.Name
                     , Ast.Op
                     , Ast.Phases
                     , Ast.Type
                     , CodeGen.Instructions
                     , CodeGen.CodeGenM
                     , CodeGen.Util
                     , TypeCheck.ConstrainM
                     , TypeCheck.Constraint
                     , TypeCheck.ConstraintGen
                     , TypeCheck.ErrorM
                     , TypeCheck.SubAst
                     , TypeCheck.Substitution
                     , TypeCheck.Util
                     , Util.Cycle
                     , Util.Debug
                     , Util.UnorderedPair

  build-tools:         alex
                     , happy

  build-depends:       base
                     , bytestring
                     , containers
                     , array
                     , llvm-hs >= 5.0.0
                     , llvm-hs-pure >= 5.0.0
                     , monad-st
                     , mtl
                     , transformers

  ghc-options:

  default-language:    Haskell2010


executable pidgin
  hs-source-dirs:      app

  main-is:             Main.hs

  build-depends:       base
                     , pidgin

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010


test-suite pidgin-test
  hs-source-dirs:      test

  main-is:             Test.hs

  other-modules:       TestCase
                     , TestCases
                     , TestComposer
                     , Test.TypeCheck.Unify

  build-depends:       base
                     , containers
                     , pidgin
                     , tasty
                     , tasty-hunit

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/SongWithoutWords/pidgin
