name:                pidgin
version:             0.1.0.0
synopsis:            An implementation in progress for a notional language called pidgin
description:         Please see README.md
homepage:            https://github.com/SongWithoutWords/pidgin#readme
license:             BSD3
license-file:        LICENSE
author:              Ian McCall
maintainer:          ianmccall93@gmail.com
copyright:           2017 Ian McCall
category:            Programming Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


extra-source-files:
                    src/Lexer.x
                    src/Parser.y

library

  hs-source-dirs:
                    src

  exposed-modules:
                    Ast.A0Parse
                    Ast.A0Parse.Sig
                    Ast.A0Parse.Type

                    Ast.A1PostParse

                    Ast.A2Constrained
                    Ast.A2Constrained.Error
                    Ast.A2Constrained.PrettyPrint
                    Ast.A2Constrained.Type

                    Ast.A3Typed
                    Ast.A3Typed.PrettyPrint

                    Ast.Common.Access
                    Ast.Common.Intrinsic
                    Ast.Common.Mutability
                    Ast.Common.Name
                    Ast.Common.Purity
                    Ast.Common.Table
                    Ast.Common.Value

                    CodeGen
                    CodeGen.Instructions
                    CodeGen.CodeGenM
                    CodeGen.Util

                    Lexer
                    Lexer.Token
                    Lexer.FormatTokens

                    LlvmUtil

                    Parser
                    Parser.Error
                    Parser.Util

                    PostParse

                    Transforms

                    TypeCheck
                    TypeCheck.ApplySubs
                    TypeCheck.ConstrainM
                    TypeCheck.Constraint
                    TypeCheck.ConstraintGen
                    TypeCheck.ErrorM
                    TypeCheck.Kind
                    TypeCheck.SubAst
                    TypeCheck.Substitution
                    TypeCheck.Unify
                    TypeCheck.Util

                    Util.Cycle
                    Util.Debug
                    Util.MultiMap
                    Util.Preface
                    Util.PrettyShow
                    Util.UnorderedPair

  build-tools: alex, happy

  build-depends:       base
                     , bytestring
                     , containers
                     , array
                     , llvm-hs >= 5.0.0
                     , llvm-hs-pure >= 5.0.0
                     , mtl
                     , transformers

  ghc-options:

  default-language:    Haskell2010


executable pidgin
  hs-source-dirs:      app

  main-is:             Main.hs

  build-depends:       base
                     , pidgin

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010


test-suite pidgin-test
  hs-source-dirs:      test

  main-is:             Test.hs

  other-modules:     
                     Ediff
                     Test.CodeGen
                     Test.Lexer
                     Test.Parser
                     Test.TypeCheck
                     Test.TypeCheck.Unify

  build-depends:       base
                     , containers
                     , pidgin
                     , process
                     , string-qq
                     , tagged
                     , tasty
                     , tasty-hunit
                     , temporary

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/SongWithoutWords/pidgin
